# async-adbc

./: .gitignore  .gitlab-ci.yml  README.md  mkdocs.yml  pyproject.toml
.github/workflow-templates/: demo-template.properties.json  demo-template.yml
.github/workflows/: demo.yml  docs.yml  lint.yml  publish.yml  test.yml
adbc/: adbclient.py  device.py  protocol.py
adbc/plugins/: __init__.py  am.py  battery.py  cpu.py  forward.py  fps.py  gpu.py  input.py  logcat.py  mem.py  package_manager.py  plugin.py  pm.py  temp.py  traffic.py  utils.py
adbc/service/: __init__.py  host.py  local.py
async_adbc/: __init__.py  adbclient.py  device.py  exceptions.py  plugin.py  protocol.py
async_adbc/plugins/: __init__.py  am.py  battery.py  cpu.py  forward.py  fps.py  gpu.py  input.py  logcat.py  mem.py  minicap.py  pm.py  prop.py  temp.py  traffic.py  utils.py  wm.py
async_adbc/service/: __init__.py  host.py  local.py
docs/: index.md
docs/plugins/: index.md
tests/: test_adbclient.py  test_am.py  test_battery.py  test_cpu.py  test_device.py  test_forward.py  test_fps.py  test_gpu.py  test_input.py  test_logcat.py  test_mem.py  test_minicap.py  test_perf.py  test_pm.py  test_prop.py  test_protocol.py  test_temp.py  test_traffic.py  test_utils.py  testcase.py
