[tool.poetry]
name = "async-adbc"
version = "1.0.15"
description = ""
authors = ["kaluluosi <kaluluosi@gmail.com>"]
repository = "https://github.com/kaluluosi/async-adbc"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dataclasses-json = "^0.5.7"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.5"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "default"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
